# Imaginatrix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ix_engine/: CMakeLists.txt  engine.cpp  engine.h
ix_engine/common/: engine_pch.h  handles.h
ix_engine/core/: asset_manager.cpp  asset_manager.h  components.h  engine.cpp  engine.h  entity.h  entity_methods.inl  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
ix_engine/core/layers/: imgui_layer.cpp  imgui_layer.h
ix_engine/platform/: glfw_platform.cpp  glfw_platform.h
ix_engine/platform/rendering/: rendering_api.cpp  rendering_api.h
ix_engine/platform/rendering/vk/: vk_buffer.cpp  vk_buffer.h  vk_compute_pipeline.cpp  vk_compute_pipeline.h  vk_context.cpp  vk_context.h  vk_descriptor_manager.cpp  vk_descriptor_manager.h  vk_image.cpp  vk_image.h  vk_instance.cpp  vk_instance.h  vk_pipeline.cpp  vk_pipeline.h  vk_pipeline_manager.cpp  vk_pipeline_manager.h  vk_renderer.cpp  vk_renderer.h  vk_swapchain.cpp  vk_swapchain.h
ix_engine/platform/rendering/vk/passes/: cluster_build_pass.cpp  cluster_build_pass.h  cluster_culling_pass.cpp  cluster_culling_pass.h  compute_culling_pass.cpp  compute_culling_pass.h  compute_pass.cpp  compute_pass.h  depth_pre_pass.cpp  depth_pre_pass.h  equirect_to_cube_pass.cpp  equirect_to_cube_pass.h  forward_pass.cpp  forward_pass.h  imgui_pass.cpp  imgui_pass.h  skybox_pass.cpp  skybox_pass.h
ix_engine/platform/rendering/vk/render_graph/: vk_render_graph.cpp  vk_render_graph.h  vk_render_graph_builder.cpp  vk_render_graph_builder.h  vk_render_graph_registry.cpp  vk_render_graph_registry.h
ix_engine/platform/rendering/vk/resource_types/: vk_resource_types.cpp  vk_resource_types.h
ix_external/: CMakeLists.txt
ix_interface/: CMakeLists.txt  input_i.h  layer_i.h  render_graph_pass_i.h  renderer_i.h  window_i.h
ix_interface/global_common/: ix_event_pods.h  ix_global_pods.h  ix_gpu_types.h  ix_key_codes.h
sandbox_game/: CMakeLists.txt  game_layer.cpp  game_layer.h  main.cpp
sandbox_game/common/: game_pch.h
sandbox_game/res/pipelines/: default_pipelines.json
sandbox_game/res/scenes/: level1.json  stow
sandbox_game/res/shaders/: cluster_build.comp  cluster_culling.comp  compile.bat  equirect_to_cubemap.comp  forward.frag  forward.vert  frustum_culling.comp  skybox.frag  skybox.vert  test.frag  test.vert
